<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <item name="ListAllFragment" type="id" />
    <string name="app_name">記帳APP</string>
    <string name="Second_name">NEW</string>
    <string name="Detail_name">DETAIL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now">現在時間</string>
    <string name="time">Time</string>
    <string name="timeTV">時間：</string>
    <string name="costTV">金額：</string>
    <string name="typeTV">類型：</string>
    <string name="finish">finish</string>
    <string name="Apply">確定</string>
    <string name="Cancel">取消</string>
    <string name="ex">備註：</string>
    <string name="date">選擇時間</string>
    <string name="purpose">目的：</string>
    <string name="hint_purposeMTV">輸入目的</string>
    <string name="hint_costMTV">輸入金額</string>
    <string name="hint_exMTV">輸入備註</string>
    <string name="reset">reset</string>
    <string name="expense">支出</string>
    <string name="income">收入</string>
    <string name="expenseRB_toast">選擇金額類型:支出</string>
    <string name="incomeRB_toast">選擇金額類型:收入</string>
    <string name="split_char2">#$</string>
    <string name="voice_cost">voice_cost</string>
    <string name="revise_btn">修改</string>
    <string name="firstTimeOnCreate">firstTimeOnCreate</string>
    <string name="DELETE">DELETE</string>
</resources>
