<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewActivity">

    <Button
        android:id="@+id/Date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ClickDate"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Second_toolbar" />

    <Button
        android:id="@+id/now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ClickNow"
        android:text="@string/now"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/Date_button"
        app:layout_constraintTop_toBottomOf="@+id/Second_toolbar" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/Date_button"
        app:layout_constraintTop_toBottomOf="@+id/Date_button" />

    <TextView
        android:id="@+id/tvTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costTV"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/costMTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvTime3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exMTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costMTV" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/tvTime">

        <RadioButton
            android:id="@+id/expenseRB"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/expense"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/incomeRB"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/income"
            tools:ignore="TextContrastCheck" />

    </RadioGroup>

    <EditText
        android:id="@+id/costMTV"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_costMTV"
        android:inputType="number"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listener"
        app:layout_constraintTop_toTopOf="@+id/listener" />

    <EditText
        android:id="@+id/exMTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_exMTV"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/listener"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/voice_cost"
        android:onClick="listenerOnClick"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:onClick="listenerOnClick2"
        app:layout_constraintStart_toStartOf="@+id/listener"
        app:layout_constraintTop_toBottomOf="@+id/listener"
        app:srcCompat="@android:drawable/ic_btn_speak_now"
        tools:ignore="SpeakableTextPresentCheck" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/Second_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>